<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">校园信息查询系统</string>
    <string name="back">返回</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="indicator_home">首页</string>
    <string name="indicator_news">新闻</string>
    <string name="indicator_myinfo">个人中心</string>
    <string name="indicator_XYfood">校园美食</string>
    <string name="timetable">课表</string>
    <string name="xinqi">星期</string>
    <string name="Modday">一</string>
    <string name="Tuesday">二</string>
    <string name="Wednesday">三</string>
    <string name="Thursday">四</string>
    <string name="Friday">五</string>
    <string name="OneToTwoclasses">1--2节</string>
    <string name="ThreeToFourclasses">3--4节</string>
    <string name="FiveToSixclasses">5--6节</string>
    <string name="SevenToEightclasses">7--8节</string>
    <string name="pleaseChooseYourInformation">请选择个人信息</string>
    <string name="study_room">自习室</string>
    <string name="single_week">单周</string>
    <string name="double_week">双周</string>
    <string name="choose_day_of_week">选择星期几</string>
    <string name="choose_class_of_day">选择第几节课</string>
    <string name="A_Building">A楼</string>
    <string name="B_Building">B楼</string>
    <string name="C_Building">C楼</string>
    <string name="XYMap">校园地图</string>
    <string name="recruitment">招聘</string>
    <string name="food">美食</string>
    <string name="xuRiYuan">旭日苑</string>
    <string name="mealMarket">美食广场</string>
    <string name="freshman_guide">新生指南</string>
    <string name="articles_found">失物招领</string>
    <string name="secondary_market">跳蚤市场</string>
    <string name="indicator_school_news">学校新闻</string>
    <string name="indicator_school_announcement">学校公告</string>
    <string name="indicator_school_info">学校概况</string>
    <string name="data_is_loading">数据正在加载&#8230;</string>
    <string name="data_have_got_all">数据已全部加载！</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="admission_year">入学年份</string>
    <string name="professional">专业</string>
    <string name="_class">班级</string>
    <string name="satelliteMap">卫星图</string>
    <string name="trafficMap">交通图</string>
    <string name="the_internet_is_not_avaliable">网络连接异常，请检查网络连接！</string>
    <string name="the_internet_is_error">网络出现错误，稍后重试！</string>
    <string name="e_mail">邮    箱</string>
    <string name="exclamation">！</string>
    <string name="passWord">密    码</string>
    <string name="passWordIsMadeByCharacterOrNumber">密码由6&#8211;18位字母、数字组成</string>
    <string name="forgetPassWord">忘记密码？</string>
    <string name="login">登    陆</string>
    <string name="register">注    册</string>
    <string name="title_activity_sign_up">activity_sign_up</string>
    <string name="title_activity_register">RegisterActivity</string>
    <string name="user_name">用 户 名</string>
    <string name="confirm_password">确认密码</string>
    <string name="personal_profile">个人资料</string>
    <string name="user_name_">用  户  名：</string>
    <string name="registered_Email_">注册邮箱：</string>
    <string name="modify_passWord">修改密码</string>
    <string name="log_off">注销账号</string>
    <string name="more_">更多&#8230;</string>
    <string name="ContactUs">联系我们</string>
    <string name="develop_member">开发人员</string>
    <string name="old_password">旧 密 码</string>
    <string name="new_password">新 密 码</string>
    <string name="zby_qq_Email">962368404@qq.com</string>
    <string name="QQ_number">QQ号码</string>
    <string name="zby_qq_number">962368404</string>
    <string name="XMZJ">项目总监</string>
    <string name="JSML">技术码农</string>
    <string name="WLMH">我来美化</string>
    <string name="zhangboyue">科比·勒布朗</string>
    <string name="MMM">某某某</string>
    <string name="my_publish">我的发布</string>
    <string name="i_want_publish">我要发布</string>
    <string name="i_pick_up">我捡了东西</string>
    <string name="i_lost">我丢了东西</string>
    <string name="please_input_title">请输入标题(20个汉字以内):</string>
    <string name="please_input_article">请输入正文(200个汉字以内):</string>
    <string name="please_input_phone_number">请输入电话号码:</string>
    <string name="your_last_name">您的姓氏:</string>
    <string name="male">男士</string>
    <string name="female">女士</string>
    <string name="my_trade">我的交易</string>
    <string name="i_want_trade">我要交易</string>
    <string name="i_want_sale">我要售出</string>
    <string name="i_want_buy">我要买入</string>
    <string name="title_activity_forget_pass_word">ForgetPassWordActivity</string>
    <string name="send_passWord_to_Email">系统将发送账户密码到您注册的邮箱中，请注意查收！</string>
    <string name="send">发送</string>
    <string name="title_activity_restuarant_fragment">RestuarantFragment</string>
    <string name="title_activity_restaurant_fragment">RestaurantFragment</string>
    <string name="title_activity_meal_fragment">MealFragment</string>

</resources>
