<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" 
    style="@style/formalLnltFrgt" >
        
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="15dip"
        android:textSize="25sp"
        android:textColor="@android:color/background_dark"
        android:text="@string/develop_member" />
    
	<View
       	android:layout_width="match_parent"
        android:layout_height="5dip"
        android:layout_marginBottom="10dip"
   	    android:background="#696969" />
    
	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="8dip"
	    android:paddingBottom="8dip">
		    
		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:textSize="18sp"
	        android:textColor="@android:color/background_dark"
		    android:text="@string/XMZJ" />
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="15dip"
			android:textColor="@android:color/background_dark"
		    android:text="@string/MMM"
		    android:textSize="18sp"/>
	</LinearLayout>

	<View
       	android:layout_width="match_parent"
        android:layout_height="1dip"
       	android:layout_marginRight="20dip"
   	    android:background="#696969" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="8dip"
	    android:paddingBottom="8dip">
		    
		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
			android:textColor="@android:color/background_dark"
		    android:textSize="18sp"
		    android:text="@string/JSML" />
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="15dip"
			android:textColor="@android:color/background_dark"
		    android:text="@string/zhangboyue"
		    android:textSize="18sp"/>
	</LinearLayout>

	<View
       	android:layout_width="match_parent"
        android:layout_height="1dip"
       	android:layout_marginRight="20dip"
   	    android:background="#696969" />

	<LinearLayout
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="8dip"
	    android:paddingBottom="8dip">
		    
		<TextView android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
            android:textColor="@android:color/background_dark"
		    android:textSize="18sp"
		    android:text="@string/WLMH" />
		
		<TextView 
		    android:layout_width="wrap_content"
		    android:layout_height="wrap_content"
		    android:paddingLeft="15dip"
            android:textColor="@android:color/background_dark"
		    android:text="@string/MMM"
		    android:textSize="18sp"/>
	</LinearLayout>
		
</LinearLayout>