<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
	        android:layout_width="1dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:text="@string/e_mail"
	        android:paddingRight="5dip"
	        android:textSize="20sp" />
        
        <EditText
            android:id="@+id/dtxtEmail"
	        android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="10"
            android:inputType="textEmailAddress" />
        
        <TextView android:id="@+id/txtvEmailIsNotValid"
	        android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="1"
            android:text="@string/exclamation"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>
        
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="4"
            android:text="@string/passWord"
	        android:paddingRight="5dip"
            android:textSize="20sp" />

        <EditText
            android:id="@+id/dtxtPassWord"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="10"
            android:inputType="textPassword" />

        <TextView android:id="@+id/txtvPassWordIsNotValid"
            android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="1"
            android:text="@string/exclamation"
            android:textColor="@android:color/holo_red_light"
            android:visibility="invisible"/>
        
    </LinearLayout>

    <RelativeLayout android:layout_width="match_parent"
        android:layout_height="wrap_content">
        
        <TextView android:id="@+id/txtvForgetPassWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/forgetPassWord"
            android:textSize="12sp"/>
    </RelativeLayout>
    
    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingTop="150dip" >

        <Button android:id="@+id/bttnRegisterInSignUp"
            style="@style/formButton"
            android:layout_alignParentLeft="true"
            android:text="@string/register"/>

        <Button android:id="@+id/bttnLoginInSignUp"
            style="@style/formButton"
            android:layout_alignParentRight="true"
            android:text="@string/login"/>
        
    </RelativeLayout>
    
</LinearLayout>