<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/background_light"
    android:orientation="vertical"
    android:padding="5dip" >
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
	        android:layout_width="1dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:text="@string/old_password"
	        android:paddingRight="5dip"
	        android:textSize="20sp" />
        
        <EditText
            android:id="@+id/dtxtOldPassWordInDialog"
	        android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="10"
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
	        android:layout_width="1dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:text="@string/new_password"
	        android:paddingRight="5dip"
	        android:textSize="20sp" />

        <EditText
            android:id="@+id/dtxtNewPassWordInDialog"
	        android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="10"
            android:inputType="textPassword" />

    </LinearLayout>
    
    <LinearLayout 
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <TextView
	        android:layout_width="1dip"
	        android:layout_height="wrap_content"
	        android:layout_weight="4"
	        android:text="@string/confirm_password"
	        android:paddingRight="5dip"
	        android:textSize="20sp" />

        <EditText
            android:id="@+id/dtxtConfirmNewPassWordInDialog"
	        android:layout_width="1dip"
            android:layout_height="wrap_content"
	        android:layout_weight="10"
            android:inputType="textPassword" />

    </LinearLayout>
</LinearLayout>
